bk_ida/gccida/g2/update_temp_slot_address
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1506:4: error: expected ';' after expression
rtx v7; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1506:5: error: use of undeclared identifier 'v7'
rtx v7; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1524:1: error: use of undeclared identifier 'v7'
v7 = gen_rtx_fmt_ee( EXPR_LIST, VOIDmode, temp_slot_from_address->address, 0LL); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1525:15: error: use of undeclared identifier 'v7'
v5->address = v7; 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1526:11: error: use of undeclared identifier 'v7'
address = v7; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1541:13: error: expected ';' after expression
old = ( rtx)old[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1548:13: error: expected ';' after expression
rtx = ( rtx)rtx[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1549:13: error: expected ';' after expression
old = ( rtx)old[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1553:27: error: expected expression
if ( rtx_equal_p( *( rtx *)&old[1], rtx->fld[0].rtx) ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1555:13: error: expected ';' after expression
rtx = ( rtx)rtx[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1559:44: error: expected expression
if ( rtx_equal_p( old->fld[0].rtx, *( rtx *)&rtx[1]) ) 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1562:13: error: expected ';' after expression
old = ( rtx)old[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1565:27: error: expected expression
if ( rtx_equal_p( *( rtx *)&old[1], *( rtx *)&rtx[1]) ) 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/function.c:1565:45: error: expected expression
if ( rtx_equal_p( *( rtx *)&old[1], *( rtx *)&rtx[1]) ) 
                                            ^
14 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/update_temp_slot_address/src/obj/function.o] Error 1
